Implemented UserController, Service, Repository